--- a/youtube-clone/package.json
+++ b/youtube-clone/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-svg": "^16.1.32",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
